# AEGIS

./: .gitignore  README.md  docker-compose.yaml
agents/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
agents/aegis-agent/: agent.py  prompts.py
agents/aegis_agent/: agent.py  prompts.py
dashboard/: .dockerignore  Dockerfile  README.md  api_client.py  app.py  requirements.txt
